[gd_scene load_steps=27 format=3 uid="uid://dip0fkp6jg1kn"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_fwn62"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_x3x4n"]
[ext_resource type="Script" path="res://scene/music.gd" id="3_yaiju"]
[ext_resource type="Texture2D" uid="uid://ww1ha52mb06w" path="res://Assets/Textures/ui/down.png" id="4_lesst"]
[ext_resource type="Texture2D" uid="uid://uywo5buxc0sn" path="res://Assets/Textures/photos/JSB.jpg" id="5_60fpj"]
[ext_resource type="Texture2D" uid="uid://b47pupil8y2ks" path="res://Assets/Textures/photos/FC.jpg" id="6_1j4we"]
[ext_resource type="Script" path="res://Main/Components/Missions/Trigger.gd" id="6_413ox"]
[ext_resource type="Texture2D" uid="uid://creuiaaxgwqls" path="res://Assets/Textures/phone/music_player2.png" id="7_lkdrg"]
[ext_resource type="Script" path="res://Main/Components/Missions/MissionLabel.gd" id="7_rc858"]
[ext_resource type="Texture2D" uid="uid://dkyt5fn1r8c8r" path="res://Assets/Textures/phone/phone5.png" id="10_8sq7c"]
[ext_resource type="Texture2D" uid="uid://ghrad071wkjc" path="res://Assets/Textures/phone/phone6.png" id="11_vws2g"]
[ext_resource type="Texture2D" uid="uid://bssre0y0wcwwk" path="res://Assets/Textures/phone/music_player1.png" id="12_gupot"]
[ext_resource type="Texture2D" uid="uid://dm3fkwcbq84s7" path="res://Assets/Textures/phone/phone7.png" id="12_jx46e"]
[ext_resource type="Texture2D" uid="uid://bf1ubxqio1swk" path="res://Assets/Textures/phone/phone8.png" id="13_qbn0n"]
[ext_resource type="Shader" uid="uid://d1qdu5fsvck4d" path="res://Assets/Resource/Shaders/glitch_shader2.tres" id="14_cagfq"]

[sub_resource type="Gradient" id="Gradient_cqhb6"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.96729, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6t2n1"]
gradient = SubResource("Gradient_cqhb6")
width = 240
height = 240
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.01)
metadata/_snap_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_6qk7u"]
viewport_path = NodePath("CD/SubViewport")

[sub_resource type="Gradient" id="Gradient_hdw2j"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.96729, 1)
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eppyl"]
gradient = SubResource("Gradient_hdw2j")
width = 240
height = 240
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_llnx5"]
viewport_path = NodePath("CD2/SubViewport")

[sub_resource type="Animation" id="Animation_4x027"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer3/SongName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CD:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 105)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CD2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(304, 105)]
}

[sub_resource type="Animation" id="Animation_j2xoq"]
resource_name = "backward"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CD:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-304, 105), Vector2(0, 105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CD2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 105), Vector2(304, 105)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer3/SongName:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nexs2"]
resource_name = "forward"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer3/SongName:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CD:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 105), Vector2(-304, 105)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CD2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(304, 105), Vector2(0, 105)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lk4h"]
_data = {
"RESET": SubResource("Animation_4x027"),
"backward": SubResource("Animation_j2xoq"),
"forward": SubResource("Animation_nexs2")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fg3t4"]
shader = ExtResource("14_cagfq")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="Music" type="Control"]
material = ExtResource("1_fwn62")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_x3x4n")
script = ExtResource("3_yaiju")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 3.4

[node name="ColorRect" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="header" type="Control" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2

[node name="ColorRect" type="ColorRect" parent="header"]
visible = false
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="header"]
use_parent_material = true
layout_mode = 0
offset_top = 60.0
offset_right = 304.0
offset_bottom = 120.0
scale = Vector2(1, -1)
mouse_filter = 2
texture = ExtResource("4_lesst")
expand_mode = 2
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="header"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="header/CenterContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CD" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 105.0
offset_right = 304.0
offset_bottom = 345.0

[node name="SubViewport" type="SubViewport" parent="CD"]
own_world_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(240, 240)

[node name="TextureRect" type="TextureRect" parent="CD/SubViewport"]
clip_children = 2
use_parent_material = true
custom_minimum_size = Vector2(240, 240)
offset_right = 240.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_6t2n1")
expand_mode = 2

[node name="CDTexture" type="TextureRect" parent="CD/SubViewport/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("5_60fpj")
expand_mode = 2
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CD"]
use_parent_material = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
texture = SubResource("ViewportTexture_6qk7u")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="CD"]
use_parent_material = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
texture = SubResource("GradientTexture2D_eppyl")
expand_mode = 2

[node name="Trigger" type="Control" parent="CD"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
script = ExtResource("6_413ox")

[node name="CD2" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_left = 304.0
offset_top = 105.0
offset_right = 608.0
offset_bottom = 345.0

[node name="SubViewport" type="SubViewport" parent="CD2"]
own_world_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(240, 240)

[node name="TextureRect" type="TextureRect" parent="CD2/SubViewport"]
clip_children = 2
custom_minimum_size = Vector2(240, 240)
offset_right = 240.0
offset_bottom = 240.0
texture = SubResource("GradientTexture2D_6t2n1")
expand_mode = 2

[node name="CDTexture" type="TextureRect" parent="CD2/SubViewport/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("6_1j4we")
expand_mode = 2
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CD2"]
use_parent_material = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
texture = SubResource("ViewportTexture_llnx5")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="CD2"]
use_parent_material = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
texture = SubResource("GradientTexture2D_eppyl")
expand_mode = 2

[node name="Trigger" type="Control" parent="CD2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
script = ExtResource("6_413ox")

[node name="CenterContainer2" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 120.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2"]
use_parent_material = true
layout_mode = 2

[node name="CurrentTime" type="Label" parent="CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="AllTime" type="Label" parent="CenterContainer2/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 87.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="SongName" type="Label" parent="CenterContainer3"]
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Air on the G String"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_rc858")

[node name="CenterContainer4" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 147.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer4"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureButton" type="TextureButton" parent="CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("7_lkdrg")
ignore_texture_size = true
stretch_mode = 5

[node name="BackwardButton" type="TextureButton" parent="CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
texture_normal = ExtResource("12_jx46e")
texture_pressed = ExtResource("13_qbn0n")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="PauseButton" type="TextureButton" parent="CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("10_8sq7c")
texture_pressed = ExtResource("11_vws2g")
ignore_texture_size = true
stretch_mode = 5

[node name="ForwardButton" type="TextureButton" parent="CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
texture_normal = ExtResource("12_jx46e")
texture_pressed = ExtResource("13_qbn0n")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="CenterContainer4/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("12_gupot")
ignore_texture_size = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6lk4h")
}

[node name="GlitchEffect" type="BackBufferCopy" parent="."]
visible = false
copy_mode = 2
metadata/_edit_lock_ = true

[node name="Glitch" type="ColorRect" parent="GlitchEffect"]
material = SubResource("ShaderMaterial_fg3t4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 20.0
offset_right = 104.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="drag_ended" from="CenterContainer2/HBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="CenterContainer2/HBoxContainer/HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="pressed" from="CenterContainer4/HBoxContainer/BackwardButton" to="." method="_on_backward_button_pressed"]
[connection signal="toggled" from="CenterContainer4/HBoxContainer/PauseButton" to="." method="_on_pause_button_toggled"]
[connection signal="pressed" from="CenterContainer4/HBoxContainer/ForwardButton" to="." method="_on_forward_button_pressed"]
